--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "firebase": "^8.1.1",
+    "hooks": "^0.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase": "^2.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactfire": "^3.0.0-canary.b0f2f95",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
