--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
-    "firebase": "^8.1.1",
+    "bulma": "^0.9.1",
+    "firebase": "^8.1.2",
     "hooks": "^0.3.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "0.0.0-experimental-4ead6b530",
+    "react-dom": "0.0.0-experimental-4ead6b530",
     "react-firebase": "^2.2.8",
+    "react-hook-form": "^6.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "reactfire": "^3.0.0-canary.b0f2f95",
+    "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
