--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "0.0.0-experimental-4ead6b530",
     "react-dom": "0.0.0-experimental-4ead6b530",
     "react-firebase": "^2.2.8",
+    "react-firebaseui": "^4.1.0",
     "react-hook-form": "^6.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
