--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^6.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-uuid": "^1.0.2",
     "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^0.2.4"
   },
