--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "bulma": "^0.9.1",
+    "express": "^4.17.1",
     "firebase": "^8.1.2",
     "hooks": "^0.3.2",
     "react": "0.0.0-experimental-4ead6b530",
