--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "node server.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": [
