--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "0.0.0-experimental-4ead6b530",
     "react-firebase": "^2.2.8",
     "react-firebaseui": "^4.1.0",
+    "react-google-map-picker": "^1.2.2",
     "react-hook-form": "^6.12.2",
+    "react-location-picker": "^1.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-uuid": "^1.0.2",
